--- a/tremulous.desktop
+++ b/tremulous.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Tremulous
-Comment=First person shooter
+Comment=Aliens vs Humans, First Person Shooter game with elements of Real Time Strategy
 Icon=tremulous
 Exec=tremulous
 Terminal=false
