--- a/com.grangerhub.Tremulous.desktop
+++ b/com.grangerhub.Tremulous.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Tremulous
 Comment=Aliens vs Humans, First Person Shooter game with elements of Real Time Strategy
-Icon=tremulous
+Icon=com.grangerhub.Tremulous
 Exec=tremulous
 Terminal=false
 Type=Application
