--- a/com.grangerhub.Tremulous.desktop
+++ b/com.grangerhub.Tremulous.desktop
@@ -5,4 +5,4 @@ Icon=com.grangerhub.Tremulous
 Exec=tremulous
 Terminal=false
 Type=Application
-Categories=Game;ActionGame;
+Categories=Game;ActionGame;X-Games;X-fps;X-shooter;X-rts;X-strategy;X-GPL;X-OpenSource;X-Alien;X-quake;X-ioquake3;
