Add some additional categories to the desktop file (#2)
* Add some additional categories to the desktop file

* Removed all of the non-standard categories from the desktop file except X-Shooter, and added the standard category StrategyGame.

* Changed the desktop file category X-Shooter to the registered category Shooter.

--- a/com.grangerhub.Tremulous.desktop
+++ b/com.grangerhub.Tremulous.desktop
@@ -5,4 +5,4 @@ Icon=com.grangerhub.Tremulous
 Exec=tremulous
 Terminal=false
 Type=Application
-Categories=Game;ActionGame;
+Categories=Game;ActionGame;StrategyGame;Shooter;
